@@ -1,19 +1,31 @@
 /* Copyright (c) 2007-2013 Timothy Wall, All Rights Reserved
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * The contents of this file is dual-licensed under 2 
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and 
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ * 
+ * You can freely decide which license you want to apply to 
+ * the project.
+ * 
+ * You may obtain a copy of the LGPL License at:
+ * 
+ * http://www.gnu.org/licenses/licenses.html
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ * 
+ * You may obtain a copy of the Apache License at:
+ * 
+ * http://www.apache.org/licenses/
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna;
 
 import java.io.File;
 import java.lang.reflect.Method;
+import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -46,21 +58,14 @@ public class NativeTest extends TestCase {
             signature.append(')');
 
             try {
-                Method m = Native.class.getMethod("loadLibrary", paramTypes);
+                Method m = Native.class.getMethod("load", paramTypes);
                 Class<?> returnType = m.getReturnType();
                 signature.append(Native.getSignature(returnType));
-                assertSame("Mismatched return type for signature=" + signature, Object.class, returnType);
+                assertSame("Mismatched return type for signature=" + signature, Library.class, returnType);
 //                System.out.println("===>" + m.getName() + ": " + signature);
             } catch(NoSuchMethodError err) {
                 fail("No method for signature=" + signature);
             }
-        }
-    }
-    public void testVersion() {
-        String[] INPUTS = { "1.0", "1.0.1", "2.1.3" };
-        float[] EXPECTED = { 1.0f, 1.0f, 2.1f };
-        for (int i=0;i < INPUTS.length;i++) {
-            assertEquals("Incorrectly parsed version", EXPECTED[i], Native.parseVersion(INPUTS[i]));
         }
     }
 
@@ -131,30 +136,48 @@ public class NativeTest extends TestCase {
     public void testDefaultStringEncoding() throws Exception {
         final String UNICODE = "\u0444\u043b\u0441\u0432\u0443";
         final String UNICODEZ = UNICODE + "\0more stuff";
-        byte[] utf8 = Native.getBytes(UNICODE);
+        byte[] nativeEnc = Native.getBytes(UNICODE);
         byte[] expected = UNICODE.getBytes(Native.DEFAULT_ENCODING);
-        for (int i=0;i < Math.min(utf8.length, expected.length);i++) {
+        for (int i=0;i < Math.min(nativeEnc.length, expected.length);i++) {
             assertEquals("Improperly encoded at " + i,
-                         expected[i], utf8[i]);
+                         expected[i], nativeEnc[i]);
         }
-        assertEquals("Wrong number of encoded characters", expected.length, utf8.length);
-        String result = Native.toString(utf8);
-        assertEquals("Improperly decoded", UNICODE, result);
-
+        assertEquals("Wrong number of encoded characters", expected.length, nativeEnc.length);
+        String result = Native.toString(nativeEnc);
+        // The native encoding might not support our test string; the result
+        // will then be all '?'
+        if (!result.matches("^\\?+$")) {
+            assertEquals("Improperly decoded", UNICODE, result);
+        }
+        // When the native encoding doesn't support our test string, we can only
+        // usefully compare the lengths.
         assertEquals("Should truncate bytes at NUL terminator",
-                     UNICODE, Native.toString(UNICODEZ.getBytes(Native.DEFAULT_ENCODING)));
+                UNICODE.length(), Native.toString(UNICODEZ.getBytes(Native.DEFAULT_ENCODING)).length());
     }
 
     public void testCustomizeDefaultStringEncoding() {
         Properties oldprops = (Properties)System.getProperties().clone();
-        final String ENCODING = System.getProperty("file.encoding");
+        String encoding = null;
+        // Choose a charset that is not the default encoding so we can actually
+        // tell we changed it.
+        for (String charset : Charset.availableCharsets().keySet()) {
+            if (!charset.equals(Native.DEFAULT_ENCODING)) {
+                encoding = charset;
+                break;
+            }
+        }
+        assertNotNull("No available encodings other than the default!?", encoding);
         try {
-            System.setProperty("jna.encoding", ENCODING);
-            assertEquals("Default encoding should match jna.encoding setting", ENCODING, Native.getDefaultStringEncoding());
+            System.setProperty("jna.encoding", encoding);
+            assertEquals("Default encoding should match jna.encoding setting", encoding, Native.getDefaultStringEncoding());
         }
         finally {
             System.setProperties(oldprops);
         }
+    }
+
+    public void testSizeof() {
+        assertEquals("Wrong bool size", 1, Native.BOOL_SIZE);
     }
 
     public static interface TestLib extends Library {
@@ -166,7 +189,7 @@ public class NativeTest extends TestCase {
     public void testSynchronizedAccess() throws Exception {
         final boolean[] lockHeld = { false };
         final NativeLibrary nlib = NativeLibrary.getInstance("testlib", TestLib.class.getClassLoader());
-        final TestLib lib = Native.loadLibrary("testlib", TestLib.class);
+        final TestLib lib = Native.load("testlib", TestLib.class);
         final TestLib synchlib = (TestLib)Native.synchronizedLibrary(lib);
         final TestLib.VoidCallback cb = new TestLib.VoidCallback() {
             @Override
@@ -202,17 +225,17 @@ public class NativeTest extends TestCase {
             interface TestCallback extends Callback { }
             static class InnerSubclass extends InnerTestClass implements Structure.ByReference { }
             @Override
-            protected List getFieldOrder() {
-                return Collections.EMPTY_LIST;
+            protected List<String> getFieldOrder() {
+                return Collections.<String>emptyList();
             }
         }
     }
 
     public void testFindInterfaceClass() throws Exception {
-        Class interfaceClass = TestInterface.class;
-        Class cls = TestInterface.InnerTestClass.class;
-        Class subClass = TestInterface.InnerTestClass.InnerSubclass.class;
-        Class callbackClass = TestInterface.InnerTestClass.TestCallback.class;
+        Class<?> interfaceClass = TestInterface.class;
+        Class<?> cls = TestInterface.InnerTestClass.class;
+        Class<?> subClass = TestInterface.InnerTestClass.InnerSubclass.class;
+        Class<?> callbackClass = TestInterface.InnerTestClass.TestCallback.class;
         assertEquals("Enclosing interface not found for class",
                      interfaceClass, Native.findEnclosingLibraryClass(cls));
         assertEquals("Enclosing interface not found for derived class",
@@ -225,17 +248,21 @@ public class NativeTest extends TestCase {
         int TEST_ALIGNMENT = Structure.ALIGN_NONE;
         TypeMapper TEST_MAPPER = new DefaultTypeMapper();
         String TEST_ENCODING = "test-encoding";
-        Map TEST_OPTS = new HashMap() { {
-            put(OPTION_CLASSLOADER, TestInterfaceWithInstance.class.getClassLoader());
-            put(OPTION_TYPE_MAPPER, TEST_MAPPER);
-            put(OPTION_STRUCTURE_ALIGNMENT, new Integer(TEST_ALIGNMENT));
-            put(OPTION_STRING_ENCODING, TEST_ENCODING);
-        }};
-        TestInterfaceWithInstance ARBITRARY = Native.loadLibrary("testlib", TestInterfaceWithInstance.class, TEST_OPTS);
+        Map<String, Object> TEST_OPTS = new HashMap<String, Object>() {
+            private static final long serialVersionUID = 1L;    // we're not serializing it
+
+            {
+                put(OPTION_CLASSLOADER, TestInterfaceWithInstance.class.getClassLoader());
+                put(OPTION_TYPE_MAPPER, TEST_MAPPER);
+                put(OPTION_STRUCTURE_ALIGNMENT, Integer.valueOf(TEST_ALIGNMENT));
+                put(OPTION_STRING_ENCODING, TEST_ENCODING);
+            }
+        };
+        TestInterfaceWithInstance ARBITRARY = Native.load("testlib", TestInterfaceWithInstance.class, TEST_OPTS);
         abstract class TestStructure extends Structure {}
     }
     public void testOptionsInferenceFromInstanceField() {
-        Class[] classes = { TestInterfaceWithInstance.class, TestInterfaceWithInstance.TestStructure.class };
+        Class<?>[] classes = { TestInterfaceWithInstance.class, TestInterfaceWithInstance.TestStructure.class };
         String[] desc = { "interface", "structure from interface" };
         for (int i=0;i < classes.length;i++) {
             assertEquals("Wrong type mapper found for " + desc[i],
@@ -254,25 +281,23 @@ public class NativeTest extends TestCase {
         int TEST_ALIGNMENT = Structure.ALIGN_NONE;
         TypeMapper TEST_MAPPER = new DefaultTypeMapper();
         String TEST_ENCODING = "test-encoding";
-        Map OPTIONS = new HashMap() { {
-            put(OPTION_TYPE_MAPPER, TEST_MAPPER);
-            put(OPTION_STRUCTURE_ALIGNMENT, new Integer(TEST_ALIGNMENT));
-            put(OPTION_STRING_ENCODING, TEST_ENCODING);
-        }};
+        Map<String, Object> OPTIONS = new HashMap<String, Object>() {
+            private static final long serialVersionUID = 1L;    // we're not serializing it
+
+            {
+                put(OPTION_TYPE_MAPPER, TEST_MAPPER);
+                put(OPTION_STRUCTURE_ALIGNMENT, Integer.valueOf(TEST_ALIGNMENT));
+                put(OPTION_STRING_ENCODING, TEST_ENCODING);
+            }
+        };
         abstract class TestStructure extends Structure {}
     }
     public void testOptionsInferenceFromOptionsField() {
-        Class[] classes = { TestInterfaceWithOptions.class, TestInterfaceWithOptions.TestStructure.class };
-        for (int i=0;i < classes.length;i++) {
-            assertEquals("Wrong type mapper found",
-                         TestInterfaceWithOptions.TEST_MAPPER,
-                         Native.getTypeMapper(classes[i]));
-            assertEquals("Wrong alignment found",
-                         TestInterfaceWithOptions.TEST_ALIGNMENT,
-                         Native.getStructureAlignment(classes[i]));
-            assertEquals("Wrong encoding found",
-                         TestInterfaceWithOptions.TEST_ENCODING,
-                         Native.getStringEncoding(classes[i]));
+        Class<?>[] classes = { TestInterfaceWithOptions.class, TestInterfaceWithOptions.TestStructure.class };
+        for (Class<?> cls : classes) {
+            assertEquals("Wrong type mapper found", TestInterfaceWithOptions.TEST_MAPPER, Native.getTypeMapper(cls));
+            assertEquals("Wrong alignment found", TestInterfaceWithOptions.TEST_ALIGNMENT, Native.getStructureAlignment(cls));
+            assertEquals("Wrong encoding found", TestInterfaceWithOptions.TEST_ENCODING, Native.getStringEncoding(cls));
         }
     }
 
@@ -322,13 +347,15 @@ public class NativeTest extends TestCase {
         class TypeMappedStructure extends Structure {
             public String stringField;
             @Override
-            protected List getFieldOrder() { return Arrays.asList("stringField"); }
+            protected List <String>getFieldOrder() {
+                return Arrays.asList("stringField");
+            }
         }
     }
     public interface OptionsSubclass extends OptionsBase, Library {
         TypeMapper _MAPPER = new DefaultTypeMapper();
-        Map _OPTIONS = new HashMap() { { put(Library.OPTION_TYPE_MAPPER, _MAPPER); } };
-        OptionsSubclass INSTANCE = Native.loadLibrary("testlib", OptionsSubclass.class, _OPTIONS);
+        Map<String, ?> _OPTIONS = Collections.singletonMap(Library.OPTION_TYPE_MAPPER, _MAPPER);
+        OptionsSubclass INSTANCE = Native.load("testlib", OptionsSubclass.class, _OPTIONS);
     }
     public void testStructureOptionsInference() {
         Structure s = new OptionsBase.TypeMappedStructure();
@@ -362,6 +389,15 @@ public class NativeTest extends TestCase {
         assertEquals("Wrong byte array length", VALUE.getBytes(ENCODING).length+1, buf.length);
         assertEquals("Missing NUL terminator", (byte)0, buf[buf.length-1]);
         assertEquals("Wrong byte array contents", VALUE, new String(buf, 0, buf.length-1, ENCODING));
+    }
+
+    public void testToByteArrayWithCharset() throws Exception {
+        final Charset CHARSET = Charset.forName("UTF-8");
+        final String VALUE = getName() + UNICODE;
+        byte[] buf = Native.toByteArray(VALUE, CHARSET);
+        assertEquals("Wrong byte array length", VALUE.getBytes(CHARSET).length+1, buf.length);
+        assertEquals("Missing NUL terminator", (byte)0, buf[buf.length-1]);
+        assertEquals("Wrong byte array contents", VALUE, new String(buf, 0, buf.length-1, CHARSET));
     }
 
     public void testToCharArray() {
@@ -416,6 +452,12 @@ public class NativeTest extends TestCase {
         assertEquals("Encoded C string improperly converted", getName() + UNICODE, Native.toString(buf, "utf8"));
     }
 
+    public void testStringConversionWithCharset() throws Exception {
+        final Charset CHARSET_UTF8 = Charset.forName("UTF-8");
+        byte[] buf = (getName() + UNICODE + NUL).getBytes(CHARSET_UTF8);
+        assertEquals("Encoded C string improperly converted", getName() + UNICODE, Native.toString(buf, CHARSET_UTF8));
+    }
+
     public void testWideStringConversion() {
         char[] buf = (getName() + NUL).toCharArray();
         assertEquals("Wide C string improperly converted", getName(), Native.toString(buf));
@@ -424,6 +466,12 @@ public class NativeTest extends TestCase {
     public void testGetBytes() throws Exception {
         byte[] buf = Native.getBytes(getName() + UNICODE, "utf8");
         assertEquals("Incorrect native bytes from Java String", getName() + UNICODE, new String(buf, "utf8"));
+    }
+
+    public void testGetBytesWithCharset() throws Exception {
+        final Charset CHARSET_UTF8 = Charset.forName("UTF-8");
+        byte[] buf = Native.getBytes(getName() + UNICODE, CHARSET_UTF8);
+        assertEquals("Incorrect native bytes from Java String", getName() + UNICODE, new String(buf, CHARSET_UTF8));
     }
 
     public void testGetBytesBadEncoding() throws Exception {
@@ -482,12 +530,20 @@ public class NativeTest extends TestCase {
                 System.out.println("Running tests on class " + args[i]);
                 try {
                     junit.textui.TestRunner.run((Class<? extends TestCase>) Class.forName(args[i]));
-                }
-                catch(Throwable e) {
+                } catch(Throwable e) {
                     e.printStackTrace();
                 }
             }
             try { Thread.sleep(300000); } catch(Exception e) { }
         }
+    }
+    
+    public void testVersionComparison() {
+        assertTrue("Equal version", Native.isCompatibleVersion("5.1.0", "5.1.0"));
+        assertTrue("New revision", Native.isCompatibleVersion("5.2.0", "5.2.1"));
+        assertTrue("New minor provided, older minor expected", Native.isCompatibleVersion("5.1.0", "5.10.0"));
+        assertFalse("Old minor provided, new minor expected", Native.isCompatibleVersion("5.10.0", "5.1.0"));
+        assertFalse("Different major (expected < provided)", Native.isCompatibleVersion("4.0.0", "5.0.0"));
+        assertFalse("Different major (expected > provided)", Native.isCompatibleVersion("5.0.0", "4.0.0"));
     }
 }
