@@ -1,14 +1,25 @@
 /* Copyright (c) 2007 Wayne Meissner, All Rights Reserved
  *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- * <p/>
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * The contents of this file is dual-licensed under 2 
+ * alternative Open Source/Free licenses: LGPL 2.1 or later and 
+ * Apache License 2.0. (starting with JNA version 4.0.0).
+ * 
+ * You can freely decide which license you want to apply to 
+ * the project.
+ * 
+ * You may obtain a copy of the LGPL License at:
+ * 
+ * http://www.gnu.org/licenses/licenses.html
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "LGPL2.1".
+ * 
+ * You may obtain a copy of the Apache License at:
+ * 
+ * http://www.apache.org/licenses/
+ * 
+ * A copy is also included in the downloadable source code package
+ * containing JNA, in file "AL2.0".
  */
 package com.sun.jna;
 
@@ -25,18 +36,19 @@ public class VarArgsTest extends TestCase {
         public static class TestStructure extends Structure {
             public int magic = 0;
             @Override
-            protected List getFieldOrder() {
-                return Arrays.asList(new String[] { "magic" });
+            protected List<String> getFieldOrder() {
+                return Arrays.asList("magic");
             }
         }
-        public int addInt32VarArgs(String fmt, Number... args);
+        public int addVarArgs(String fmt, Number... args);
         public String returnStringVarArgs(String fmt, Object... args);
         public void modifyStructureVarArgs(String fmt, Object arg1, Object... args);
+        public String returnStringVarArgs2(String... args);
     }
     TestLibrary lib;
     @Override
     protected void setUp() {
-        lib = Native.loadLibrary("testlib", TestLibrary.class);
+        lib = Native.load("testlib", TestLibrary.class);
     }
     @Override
     protected void tearDown() {
@@ -45,20 +57,32 @@ public class VarArgsTest extends TestCase {
     public void testIntVarArgs() {
         int arg1 = 1;
         int arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("dd", new Integer(arg1), new Integer(arg2)));
+        assertEquals("32-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("dd", Integer.valueOf(arg1), Integer.valueOf(arg2)));
     }
     public void testShortVarArgs() {
         short arg1 = 1;
         short arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("dd", new Short(arg1), new Short(arg2)));
+        assertEquals("16-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("dd", Short.valueOf(arg1), Short.valueOf(arg2)));
     }
     public void testLongVarArgs() {
         short arg1 = 1;
         short arg2 = 2;
-        assertEquals("VarArgs not added correctly", arg1 + arg2,
-                     lib.addInt32VarArgs("ll", new Long(arg1), new Long(arg2)));
+        assertEquals("64-bit integer varargs not added correctly", arg1 + arg2,
+                     lib.addVarArgs("ll", Long.valueOf(arg1), Long.valueOf(arg2)));
+    }
+    public void testFloatVarArgs() {
+        float arg1 = 1;
+        float arg2 = 2;
+        assertEquals("float varargs not added correctly", (int)arg1 + (int)arg2,
+                     lib.addVarArgs("ff", Float.valueOf(arg1), Float.valueOf(arg2)));
+    }
+    public void testDoubleVarArgs() {
+        double arg1 = 1;
+        double arg2 = 2;
+        assertEquals("double varargs not added correctly", (int)arg1 + (int)arg2,
+                     lib.addVarArgs("gg", Double.valueOf(arg1), Double.valueOf(arg2)));
     }
     public void testStringVarArgs() {
         Object[] args = new Object[] { "Test" };
@@ -66,10 +90,16 @@ public class VarArgsTest extends TestCase {
                      lib.returnStringVarArgs("", args));
     }
 
+    public void testStringVarArgsFull() {
+        Object[] args = new Object[] { "Test" };
+        assertEquals("Did not return correct string", args[0],
+                     lib.returnStringVarArgs2("", "Test"));
+    }
+
     public void testAppendNullToVarargs() {
-        Number[] args = new Number[] { new Integer(1) };
+        Number[] args = new Number[] { Integer.valueOf(1) };
         assertEquals("No trailing NULL was appended to varargs list",
-                     1, lib.addInt32VarArgs("dd", args));
+                     1, lib.addVarArgs("dd", args));
     }
 
     public void testModifyStructureInVarargs() {
